# ta2-minmod-editor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
isi backend/: app.py  dockerfile  requirements.txt
minmod/: dockerfile  package-lock.json  package.json
minmod/src/: App.tsx  Protect.tsx
minmod/src/LandingPage/: DetailedView.tsx  Landing.tsx  SearchBar.tsx  Ungroup.tsx  editModal.tsx  editableDropDown.tsx
minmod/src/Login/: login.css  login.tsx
minmod/src/Styles/: DetailedView.css  Landing.css  Search.css
minmod/src/components/: editableDropDown.tsx
minmod/src/models/: MineralSite.ts  Reference.ts
minmod_editor/: __main__.py  app.py  config.py
minmod_editor/models/: mineral_site.py
minmod_editor/routers/: login.py  mineral_site.py
minmod_editor/www/: asset-manifest.json  index.html
www/: .prettierrc  package-lock.json  package.json  tsconfig.json
www/public/: index.html  manifest.json
www/scripts/: build.py
www/src/: App.tsx  env.ts  index.css  index.tsx  routes.tsx
www/src/components/: EditableSelect.tsx  Entity.tsx  FormItem.tsx  FormLabel.module.css  FormLabel.tsx  Layout.module.css  Layout.tsx  MyButton.tsx  Navbar.module.css  Navbar.tsx  NewEditableDropdown.tsx  Primitive.tsx  ProfileMenu.tsx  ReferenceComponent.tsx  RequiredAuthentication.tsx  StoreInit.tsx  editableDropDown.tsx
www/src/misc/: index.ts
www/src/models/: CandidateEntity.ts  Commodity.ts  DedupMineralSite.ts  MineralSite.ts  Namespace.ts  Reference.ts  SettingStore.ts  index.ts  typing.ts
www_old/: package.json
(+127 files in other folders)
