[tool.poetry]
name = "ta2-minmod-editor"
version = "1.0.0"
description = ""
authors = ["Binh Vu <bvu687@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "minmod_editor", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.4" }
requests = "^2.32.3"
python-jose = "^3.3.0"
httpx = "^0.27.2"
minmodkg = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
